# trading_bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.test  FEATURE_LOCK.json  README.md  docker-compose.live.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  claude.yml  deploy.yml
docs/: README.md  trading-crash-course.html  valid-reasons-to-delete-any-model.md
docs/debugging/: README.md  docker-issues.md  exchange-connectivity.md  freqai-errors.md  telegram-setup.md  web-ui.md
docs/getting-started/: README.md  environment-variables.md  exchange-setup.md  first-run.md  prerequisites.md
docs/operations/: README.md  adding-pairs.md  going-live.md  monitoring.md  running-the-bot.md  vps-setup.md
docs/plans/: 2026-03-07-ai-crypto-trading-design.md  2026-03-07-ai-crypto-trading-implementation.md  2026-03-08-dynamic-pair-allocation-design.md  2026-03-08-dynamic-pair-allocation-implementation.md  2026-03-08-logging-and-reports-design.md  2026-03-08-logging-and-reports-implementation.md  2026-03-10-unblock-trading-design.md  2026-03-10-unblock-trading.md
docs/reference/: README.md  architecture.md  configuration.md  model-training.md  risk-management.md  strategy.md
scripts/: backup-models.sh  daily-report.py  export-db.sh  restart.sh  rotate-logs.sh  serve.sh  setup-cron.sh  setup.sh  shutdown.sh  two-hour-report.py
scripts/report/: generator.py  log_parser.py  rotation.py
tests/: conftest.py
tests/data_clients/: test_glassnode_client.py  (+2 more)
user_data/: config.json  config.live.json  config.pairs.json
(+23 files in other folders)
