[project]
name = "ai-crypto-trader"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "freqtrade>=2024.1",
    "ccxt>=4.0.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "ta-lib>=0.4.28",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
